--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "typescript": "^3.3.3333"
   },
   "scripts": {
-    "start": "cross-env NODE_PATH=src react-scripts start",
+    "start": "cross-env NODE_PATH=src react-scripts start --open",
     "start-local": "npm run json-server & REACT_APP_API_LOCAL=http://localhost:3001/ npm start",
     "build": "cross-env NODE_PATH=src react-scripts build",
     "test": "react-scripts test",
